@@ -21,15 +21,6 @@
 #include <gpuarch.h>
 #include <debug.h>
 
-/* Macros for quick access to pipe registers */
-#define INIT_SCHEDULE  (COMPUTE_UNIT.init_schedule)
-#define SCHEDULE_FETCH  (COMPUTE_UNIT.schedule_fetch)
-#define FETCH_DECODE  (COMPUTE_UNIT.fetch_decode)
-#define DECODE_READ  (COMPUTE_UNIT.decode_read)
-#define READ_EXECUTE  (COMPUTE_UNIT.read_execute)
-#define EXECUTE_WRITE  (COMPUTE_UNIT.execute_write)
-
-
 
 
 /*
@@ -42,29 +33,121 @@ int gpu_pipeline_debug_category;
 
 
 /*
- * Public Functions
+ * Schedule Stage
  */
 
-void gpu_compute_unit_schedule(int compute_unit)
+static void gpu_compute_unit_schedule_next_subwavefront(struct gpu_compute_unit_t *compute_unit)
 {
-	//struct opencl_kernel_t *kernel = gpu_device->kernel;
+	struct gpu_device_t *device = compute_unit->device;
+	struct gpu_ndrange_t *ndrange = device->ndrange;
+	struct gpu_work_group_t *work_group;
+	struct gpu_wavefront_t *wavefront;
+
+	/* Go to next subwavefront */
+	INIT_SCHEDULE.subwavefront_id++;
+	if (INIT_SCHEDULE.subwavefront_id < gpu_compute_unit_time_slots)
+		return;
+	
+	/* Scheduling of current wavefront finished */
+	work_group = ndrange->work_groups[INIT_SCHEDULE.work_group_id];
+	assert(work_group->running_list_head);
+	INIT_SCHEDULE.subwavefront_id = 0;
+
+	/* Schedule new wavefront */
+	if (INIT_SCHEDULE.wavefront_running_next &&
+		DOUBLE_LINKED_LIST_MEMBER(work_group, running, INIT_SCHEDULE.wavefront_running_next))
+	{
+		assert(INIT_SCHEDULE.wavefront_running_next->id != INIT_SCHEDULE.wavefront_id);
+		wavefront = INIT_SCHEDULE.wavefront_running_next;
+	} else {
+		wavefront = work_group->running_list_head;
+	}
+	INIT_SCHEDULE.wavefront_id = wavefront->id;
+	INIT_SCHEDULE.wavefront_running_next = wavefront->running_next;
+}
+
+
+static void gpu_compute_unit_emulate(struct gpu_compute_unit_t *compute_unit)
+{
+	int i;
+	struct gpu_device_t *device = compute_unit->device;
+	struct gpu_ndrange_t *ndrange = device->ndrange;
+	struct gpu_work_group_t *work_group = ndrange->work_groups[INIT_SCHEDULE.work_group_id];
+	struct gpu_wavefront_t *wavefront = ndrange->wavefronts[INIT_SCHEDULE.wavefront_id];
+
+	assert(DOUBLE_LINKED_LIST_MEMBER(work_group, running, wavefront));
+	gpu_pipeline_debug("emul");
+	switch (wavefront->clause_kind) {
+
+	case GPU_CLAUSE_CF:
+		gpu_wavefront_execute(wavefront);
+		gpu_pipeline_debug(" cat=CF");
+		gpu_pipeline_debug(" inst=\"%s\"\n",
+			wavefront->cf_inst.info->name);
+		break;
+	
+	case GPU_CLAUSE_ALU:
+		gpu_wavefront_execute(wavefront);
+		if (debug_status(gpu_pipeline_debug_category)) {
+			for (i = 0; i < wavefront->alu_group.inst_count; i++) {
+				struct amd_inst_t *inst = &wavefront->alu_group.inst[i];
+				gpu_pipeline_debug(" inst.%s=\"%s\"",
+					map_value(&amd_alu_map, inst->alu),
+					inst->info->name);
+			}
+		}
+		break;
+
+	case GPU_CLAUSE_TC:
+		gpu_wavefront_execute(wavefront);
+		gpu_pipeline_debug(" cat=TC");
+		gpu_pipeline_debug(" inst=\"%s\"\n",
+			wavefront->tc_inst.info->name);
+		break;
+	
+	default:
+		abort();
+
+	}
+	gpu_pipeline_debug("\n");
+}
+
+
+void gpu_compute_unit_schedule(struct gpu_compute_unit_t *compute_unit)
+{
+	struct gpu_device_t *device = compute_unit->device;
+	struct gpu_ndrange_t *ndrange = device->ndrange;
+
+	struct gpu_work_group_t *work_group;
+	struct gpu_wavefront_t *wavefront;
 
 	/* Check if schedule stage is active */
 	if (!INIT_SCHEDULE.do_schedule)
 		return;
 	
-	/* Check boundaries of wavefront and subwavefront */
+	/* By default, do not schedule next cycle */
+	//INIT_SCHEDULE.do_schedule = 0;
 	
-	/* Go to next subwavefront */
-	INIT_SCHEDULE.subwavefront++;
-	if (INIT_SCHEDULE.subwavefront >= gpu_compute_unit_time_slots) {  /* FIXME partial wavefronts */
-		INIT_SCHEDULE.subwavefront = 0;
-		INIT_SCHEDULE.wavefront++;
-	}
+	/* Check boundaries of wavefront and subwavefront */
+	assert(INIT_SCHEDULE.work_group_id >= 0 && INIT_SCHEDULE.work_group_id < ndrange->work_group_count);
+	work_group = ndrange->work_groups[INIT_SCHEDULE.work_group_id];
+	assert(INIT_SCHEDULE.wavefront_id >= work_group->wavefront_id_first
+		&& INIT_SCHEDULE.wavefront_id <= work_group->wavefront_id_last);
+	wavefront = ndrange->wavefronts[INIT_SCHEDULE.wavefront_id];
+	assert(INIT_SCHEDULE.subwavefront_id >= 0 && INIT_SCHEDULE.subwavefront_id < gpu_compute_unit_time_slots);
+	gpu_pipeline_debug("stg name=\"schedule\", work_group=\"%d\", wavefront=\"%d\", subwavefront=\"%d\"\n",
+		INIT_SCHEDULE.work_group_id, INIT_SCHEDULE.wavefront_id, INIT_SCHEDULE.subwavefront_id);
+
+	/* Emulate instruction if it's the first subwavefront */
+	if (!INIT_SCHEDULE.subwavefront_id)
+		gpu_compute_unit_emulate(compute_unit);
+
+	/* Schedule next subwavefront/wavefront */
+	gpu_compute_unit_schedule_next_subwavefront(compute_unit);
 }
 
 
-void gpu_compute_unit_fetch(int compute_unit)
+void gpu_compute_unit_fetch(struct gpu_compute_unit_t *compute_unit)
 {
 	/* Check if fetch stage is active */
 	if (!SCHEDULE_FETCH.do_fetch)
@@ -75,7 +158,7 @@ void gpu_compute_unit_fetch(int compute_unit)
 }
 
 
-void gpu_compute_unit_decode(int compute_unit)
+void gpu_compute_unit_decode(struct gpu_compute_unit_t *compute_unit)
 {
 	/* Check if decode stage is active */
 	if (!FETCH_DECODE.do_decode)
@@ -86,7 +169,7 @@ void gpu_compute_unit_decode(int compute_unit)
 }
 
 
-void gpu_compute_unit_read(int compute_unit)
+void gpu_compute_unit_read(struct gpu_compute_unit_t *compute_unit)
 {
 	/* Check if read stage is active */
 	if (!DECODE_READ.do_read)
@@ -97,7 +180,7 @@ void gpu_compute_unit_read(int compute_unit)
 }
 
 
-void gpu_compute_unit_execute(int compute_unit)
+void gpu_compute_unit_execute(struct gpu_compute_unit_t *compute_unit)
 {
 	/* Check if execute stage is active */
 	if (!READ_EXECUTE.do_execute)
@@ -108,7 +191,7 @@ void gpu_compute_unit_execute(int compute_unit)
 }
 
 
-void gpu_compute_unit_write(int compute_unit)
+void gpu_compute_unit_write(struct gpu_compute_unit_t *compute_unit)
 {
 	/* Check if write stage is active */
 	if (!EXECUTE_WRITE.do_write)
@@ -119,7 +202,7 @@ void gpu_compute_unit_write(int compute_unit)
 }
 
 
-void gpu_compute_unit_next_cycle(int compute_unit)
+void gpu_compute_unit_next_cycle(struct gpu_compute_unit_t *compute_unit)
 {
 	gpu_compute_unit_write(compute_unit);
 	gpu_compute_unit_execute(compute_unit);
@@ -128,33 +211,4 @@ void gpu_compute_unit_next_cycle(int compute_unit)
 	gpu_compute_unit_fetch(compute_unit);
 	gpu_compute_unit_schedule(compute_unit);
 }
-
-
-/* FIXME */
-#if 0
-void gpu_run(struct opencl_kernel_t *kernel)
-{
-	int compute_unit;
-
-	/* Save currently executing kernel */
-	gpu_device->kernel = kernel;
-
-	/* Debug */
-	gpu_pipeline_debug("init global_size=%d, local_size=%d, group_count=%d, wavefront_size=%d, "
-		"wavefronts_per_work_group=%d\n",
-		kernel->global_size, kernel->local_size, kernel->group_count, gpu_wavefront_size,
-		kernel->wavefronts_per_work_group);
-
-	compute_unit = 0;
-	INIT_SCHEDULE.do_schedule = 1;
-	INIT_SCHEDULE.work_group = 0;
-	INIT_SCHEDULE.wavefront = 0;
-	INIT_SCHEDULE.subwavefront = 0;
-
-	while (INIT_SCHEDULE.do_schedule) {
-		gpu_compute_unit_next_cycle(compute_unit);
-	}
-}
-#endif
-
 
